gccida/g0/alloc_reg_set_mem
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_reg_set_mem/src/gcse.c:1670:31: error: expected expression
reg_set_table = ( reg_set_0 **)gmalloc( 8 * ( n_regs + 100)); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_reg_set_mem/src/gcse.c:1670:19: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_table = ( reg_set_0 **)gmalloc( 8 * ( n_regs + 100)); 
                  ^~~~~~~~~
                  reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_reg_set_mem/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_reg_set_mem/src/obj/gcse.o] Error 1
